force-app/main/default/objects/Feature_Usage__c/Feature_Usage__c.object-meta.xml
<CustomObject>
    <label>Feature Usage</label>
    <nameField>
        <label>Feature Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>