force-app/main/default/objects/Feature_Usage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Usages</relationshipLabel>
    <relationshipName>Feature_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>